[project]
name = "restart_lambda"
version = "0.1.0"
description = "AWS Lambda providing the-restart.co Registry app."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "mangum>=0.17.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "wp-python==0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[dependency-groups]
dev = [
    "notebook>=7.5.3",
]
